wip for land cover pct

--- a/figure_plot/plot_landcover_pct.ipynb
+++ b/figure_plot/plot_landcover_pct.ipynb
@@ -147,7 +147,7 @@
     "pwd = os.getcwd()\n",
     "rootpath = os.path.abspath(os.path.join(pwd, '..'))\n",
     "\n",
-    "filename_percentile = join(rootpath, 'data', 'land_cover_pct.xlsx')\n",
+    "filename_percentile = join(rootpath, 'results', 'land_cover_pct.xlsx')\n",
     "\n",
     "sheet_hispaniola = pd.read_excel(filename_percentile, sheet_name='Hispaniola')\n",
     "sheet_haiti = pd.read_excel(filename_percentile, sheet_name='Haiti')\n",
