--- a/landcover_analysis/lc_pct_calculate.ipynb
+++ b/landcover_analysis/lc_pct_calculate.ipynb
@@ -2415,7 +2415,7 @@
    },
    "cell_type": "code",
    "source": [
-    "    output_excel = pd.ExcelWriter(join(rootpath, 'data', 'land_cover_pct.xlsx'))\n",
+    "    output_excel = pd.ExcelWriter(join(rootpath, 'results', 'land_cover_pct.xlsx'))\n",
     "    # output_excel.save()\n",
     "    \n",
     "    with pd.ExcelWriter(output_excel) as writer:  \n",
