pf patch landscape analysis and plot

--- a/figure_plot/pf_fragmentation_plot.ipynb
+++ b/figure_plot/pf_fragmentation_plot.ipynb
@@ -9,8 +9,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-21T19:21:33.324715Z",
-     "start_time": "2024-06-21T19:21:33.292715Z"
+     "end_time": "2024-06-26T03:23:32.125482Z",
+     "start_time": "2024-06-26T03:23:32.112427Z"
     }
    },
    "cell_type": "code",
@@ -84,8 +84,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-21T19:21:37.131763Z",
-     "start_time": "2024-06-21T19:21:35.515816Z"
+     "end_time": "2024-06-26T03:23:40.804535Z",
+     "start_time": "2024-06-26T03:23:38.045847Z"
     }
    },
    "cell_type": "code",
@@ -93,7 +93,7 @@
     "pwd = os.getcwd()\n",
     "rootpath = os.path.abspath(os.path.join(pwd, '..'))\n",
     "\n",
-    "filename = join(rootpath, 'data', 'pf_landscape_metrix.xlsx')\n",
+    "filename = join(rootpath, 'results', 'pf_landscape_metrix.xlsx')\n",
     "df = pd.read_excel(filename)   # read the data\n",
     "\n",
     "array_year = np.arange(1996, 2023)\n",
