--- a/cold_running/cold_plot.ipynb
+++ b/cold_running/cold_plot.ipynb
@@ -13,15 +13,11 @@
     "import numpy as np\n",
     "import os\n",
     "from os.path import join\n",
-    "import sys\n",
     "import glob\n",
     "import pandas as pd\n",
     "from datetime import datetime\n",
-    "import matplotlib.pyplot as plt\n",
-    "from pycold import cold_detect\n",
+    "from pycold import cold_detect   # pycold is workable on Mac and Linux system. Windows system is not workable at present\n",
     "from osgeo import gdal, gdal_array, gdalconst\n",
-    "import matplotlib\n",
-    "import matplotlib.patches as mpatches\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.lines import Line2D\n",
@@ -29,13 +25,10 @@
     "\n",
     "pwd = os.getcwd()\n",
     "rootpath = os.path.abspath(os.path.join(pwd, '..'))\n",
-    "path_pythoncode = join(rootpath, 'pythoncode')\n",
-    "sys.path.append(path_pythoncode)\n",
     "\n",
-    "from cold_running import cold_data_prepare\n",
+    "from cold_running.cold_running import cold_data_prepare\n",
     "\n",
     "list_band_name = ['Blue', 'Green', 'Red', 'NIR', 'SWIR1', 'SWIR2', 'Thermal']\n",
-    "Block_Size = 250\n",
     "\n",
     "\n",
     "def datenum_to_datetime(datenum):\n",
@@ -274,9 +267,10 @@
     "    num_clear_obs = np.count_nonzero(mask)\n",
     "\n",
     "    try:\n",
+    "        Block_Size = 250\n",
+    "        pos = row_id_in_block * Block_Size + col_id_in_block + 1\n",
     "        cold_result_singlepixel = cold_detect(array_obsdatenum, blues, greens, reds, nirs, swir1s, swir2s, thermals,\n",
-    "                                                qas, pos=row_id_in_block * Block_Size + col_id_in_block, conse=4,\n",
-    "                                                t_cg=11.07, b_c2=True)\n",
+    "                                                qas, pos=pos, conse=4, t_cg=11.07, b_c2=True)\n",
     "\n",
     "        title = '{} row={}  col={}  num of clear obs:{}  num of segments: {}'. format(tilename, row_id_in_block, col_id_in_block, num_clear_obs, len(cold_result_singlepixel))\n",
     "\n",
