--- a/figure_plot/plot_vi_change_agents.ipynb
+++ b/figure_plot/plot_vi_change_agents.ipynb
@@ -9,8 +9,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-21T19:42:05.700319Z",
-     "start_time": "2024-06-21T19:42:05.673392Z"
+     "end_time": "2024-08-05T20:15:17.219291Z",
+     "start_time": "2024-08-05T20:15:17.195448Z"
     }
    },
    "cell_type": "code",
@@ -99,13 +99,13 @@
    ],
    "id": "ddcc4e38a114d7ef",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-21T19:48:01.186267Z",
-     "start_time": "2024-06-21T19:47:59.955694Z"
+     "end_time": "2024-08-05T20:15:23.245335Z",
+     "start_time": "2024-08-05T20:15:21.595948Z"
     }
    },
    "cell_type": "code",
@@ -113,7 +113,7 @@
     "pwd = os.getcwd()\n",
     "rootpath = os.path.abspath(os.path.join(pwd, '..'))\n",
     "\n",
-    "filename = join(rootpath, 'data', 'vi_change_disturbance.xlsx')\n",
+    "filename = join(rootpath, 'results', 'vi_change_disturbance.xlsx')\n",
     "\n",
     "df_before_after_vi_modification = pd.read_excel(filename)\n",
     "\n",
@@ -233,7 +233,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 4
+   "execution_count": 3
   }
  ],
  "metadata": {
